--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.67.2",
+    "react-native-web": "^0.17.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
