--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@expo/vector-icons": "^12.0.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,6 +21,7 @@
     "react-google-button": "^0.7.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
+    "react-native": "^0.67.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
