--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@expo/vector-icons": "^12.0.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
     "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -33,7 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
