--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.5.1",
     "firebase": "^9.1.0",
     "firebase-admin": "^10.0.2",
@@ -27,6 +28,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-native": "^0.67.2",
+    "react-native-paper": "^4.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
