--- a/Kakathon/package.json
+++ b/Kakathon/package.json
@@ -8,29 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
+    "@expo/vector-icons": "^12.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
     "dotenv": "10.0.0",
-    "expo": "~41.0.1",
-    "expo-constants": "~10.1.3",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^44.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-status-bar": "~1.2.0",
     "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
